# advent-of-code

./: .gitignore  Cargo.toml  Makefile  README.md
2015/: Cargo.toml
2015/src/day01/: main.rs
2015/src/day02/: main.rs
2015/src/day03/: main.rs
2015/src/day04/: main.rs
2015/src/day05/: main.rs
2015/src/day06/: main.rs
2022/src/day01/: main.rs
2022/src/day02/: main.rs
2022/src/day03/: main.rs
2022/src/day04/: main.rs
2022/src/day05/: main.rs
2022/src/day07/: main.rs
2022/src/day08/: main.rs
2022/src/day09/: main.rs
2022/src/day12/: main.rs
2022/src/day13/: main.rs
2022/src/day17/: main.rs
2022/src/day18/: main.rs
2022/src/day19/: main.rs
2022/src/day20/: main.rs
2022/src/day22/: main.rs
2022/src/day23/: main.rs
2022/src/day25/: main.rs
2023/: README.md
2023/src/day01/: main.rs
2023/src/day02/: main.rs
src/: lib.rs
src/2015/day01/: main.rs
src/2015/day02/: main.rs
src/2015/day03/: main.rs
src/2015/day04/: main.rs
src/2015/day05/: main.rs
src/2015/day06/: main.rs
src/2022/day01/: main.rs
src/2022/day02/: main.rs
src/2022/day03/: main.rs
src/2022/day04/: main.rs
src/2022/day05/: main.rs
src/2022/day06/: main.rs
src/2022/day07/: main.rs
src/2022/day08/: main.rs
src/2022/day09/: main.rs
src/2022/day10/: main.rs
src/2022/day11/: main.rs
src/2022/day12/: main.rs
src/2022/day13/: main.rs
src/2022/day14/: main.rs
src/2022/day15/: main.rs
src/2022/day16/: main.rs
src/2022/day17/: main.rs
src/2022/day18/: main.rs
src/2022/day19/: main.rs
src/2022/day20/: main.rs
src/2022/day21/: main.rs
src/2022/day22/: main.rs
src/2022/day23/: main.rs
src/2022/day25/: main.rs
src/2023/: README.md
src/2023/day01/: main.rs
src/2023/day02/: main.rs
src/2023/day03/: main.rs
src/2023/day04/: main.rs
src/2023/day05/: main.rs
src/2023/day06/: main.rs
src/2023/day07/: main.rs
src/2023/day08/: main.rs
src/2023/day09/: main.rs
src/2023/day10/: main.rs
src/2023/day11/: main.rs
src/2023/day12/: main.rs
src/2023/day13/: main.rs
src/2023/day14/: main.rs
src/2023/day15/: main.rs
src/2023/day16/: main.rs
src/2023/day17/: main.rs
src/2023/day18/: main.rs
src/2023/day19/: main.rs
src/2023/day20/: main.rs
src/2023/day21/: main.rs
src/day01/: main.rs
src/day04/: main.rs
src/day06/: main.rs
src/day10/: main.rs
src/day11/: main.rs
src/day14/: main.rs
src/day15/: main.rs
src/day16/: main.rs
src/day17/: main.rs
src/day21/: main.rs
src/utils/input/: mod.rs
src/utils/point/: mod.rs
